--- a/authors.txt
+++ b/authors.txt
@@ -3,4 +3,5 @@ AUTHORS
 Junethack developers:
     Mikko Juola <mikjuo@gmail.com> (AKA Adeon)
     Christian Stegen <c.stegen@jungundwillich.de> (AKA stenno)
+    Cheryl Chong <cheryl@chongsworship.com> (AKA xiella)
 
