--- a/authors.txt
+++ b/authors.txt
@@ -4,4 +4,4 @@ Junethack developers:
     Mikko Juola <mikjuo@gmail.com> (AKA Adeon)
     Christian Stegen <c.stegen@jungundwillich.de> (AKA stenno)
     Cheryl Chong <cheryl@chongsworship.com> (AKA xiella)
-
+    Ryan Karl <rawrnix@rawrnix.com> (AKA rawrmage)
