--- a/authors.txt
+++ b/authors.txt
@@ -1,6 +1,7 @@
 AUTHORS
 
 Junethack developers:
+    Edoardo Spadolini (AKA kerio)
     Mikko Juola <mikjuo@gmail.com> (AKA Adeon)
     Christian Stegen <c.stegen@jungundwillich.de> (AKA stenno)
     Cheryl Chong <cheryl@chongsworship.com> (AKA xiella)
