--- a/authors.txt
+++ b/authors.txt
@@ -2,7 +2,7 @@ AUTHORS
 
 Junethack developers:
     Edoardo Spadolini <kerio00@gmail.com> (AKA kerio)
-    Christian Stegen <c.stegen@jungundwillich.de> (AKA stenno)
+    Christian Stegen <junethack@app42.de> (AKA stenno)
     Cheryl Chong <cheryl@chongsworship.com> (AKA xiella)
     Ryan Karl <rawrnix@rawrnix.com> (AKA rawrmage)
     Mikko Juola <mikjuo@gmail.com> (AKA Adeon)
