--- a/authors.txt
+++ b/authors.txt
@@ -1,9 +1,11 @@
-AUTHORS
+The following people have contributed to the development of Junethack.
 
-Junethack developers:
-    Edoardo Spadolini <kerio00@gmail.com> (AKA kerio)
-    Christian Stegen <junethack@app42.de> (AKA stenno)
-    Cheryl Chong <cheryl@chongsworship.com> (AKA xiella)
-    Ryan Karl <rawrnix@rawrnix.com> (AKA rawrmage)
-    Mikko Juola <mikjuo@gmail.com> (AKA Adeon)
-    Patric Mueller <bhaak@gmx.net> (AKA bhaak)
+    Name               Nickname   E-mail
+    ========================================================
+    Edoardo Spadolini  'kerio'    <kerio00@gmail.com>
+    Christian Stegen   'stenno'   <junethack@app42.de>
+    Cheryl Chong       'xiella'   <cheryl@chongsworship.com>
+    Ryan Karl          'rawrmage' <rawrnix@rawrnix.com>
+    Mikko Juola        'Adeon'    <mikjuo@gmail.com>
+    Patric Mueller     'bhaak'    <bhaak@gmx.net>
+
