--- a/icons/working/todo
+++ b/icons/working/todo
@@ -54,6 +54,7 @@ cheryl = xiella
 #		- brighter red please (bhaak)
 #	- prince of the world:
 #		- prince, king of the world looks good.
+		- king: magenta (bhaak)
 
 # META
 
