Credit Shawn M Moore as we just learned he deserves some.
He organized June NetHack tournament in 2006-2007 and our tournament is quite
similar to it and quite possibly directly inspired. Exact details are unknown.
With the one exception of the mysterious casmith789 who is indirectly
responsible for the creation of Junethack.

--- a/authors.txt
+++ b/authors.txt
@@ -9,3 +9,6 @@ The following people have contributed to the development of Junethack.
     Mikko Juola        'Adeon'    <mikjuo@gmail.com>
     Patric Mueller     'bhaak'    <bhaak@gmx.net>
 
+Junethack follows the spirit of June NetHack Tournament that was organized by
+Shawn M Moore during the years 2006 and 2007 on nethack.alt.org.
+
